<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/act2Margin"
        android:layout_height="wrap_content"
        android:text="@string/multiples" />

    <Button
        android:id="@+id/button3"
        android:layout_margin="@dimen/act2Margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/square" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/act2Margin"
        android:layout_height="wrap_content"
        android:text="@string/cube" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/act2Margin"
        android:layout_height="wrap_content"
        android:text="@string/div" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/act2Margin"
        android:text="@string/anotherNum" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/act2Margin"
        android:textSize="@dimen/outputSize"
        android:textStyle="bold"
        android:textColorHint="@color/black"
        android:layout_height="wrap_content"
        android:hint="@string/output" />

</LinearLayout>